2003-03-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (module-override!, make-mutable-parameter,
	lookup-duplicates-handlers, default-module-duplicates-handler):
	New functions.
	(process-duplicates): Don't call duplicates handlers for duplicate
	bindings of the same variable.
	(process-define-module): Process #:replace.
	(compile-interface-spec, resolve-interface): Process #:prefix.

	* format.scm (format): Marked as replacement.

	* threads.scm (future, future-ref): Marked as replacements.

2003-03-07  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	These changes enables checking for duplicate imported bindings.

	* boot-9.scm (process-define-module): Handle #:duplicates.
	(module-use-interfaces! process-duplicates): New functions.
	(duplicate-handlers): Dictionary of duplicate handlers.
	(module-symbol-local-binding, module-symbol-binding): Bugfix.

2003-03-04  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* session.scm (apropos): Use hash-for-each instead of
	array-for-each.

2003-02-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (make-module): Changed default size from 1021 to 31
	(since the size now adapts).
	(macro-table, xformer-table): Changed default size from 523 to 61.
	(make-module): Don't call make-hash-table with zero size.

	* Makefile.am (ice9_sources): Added weak-vector.scm.

	* weak-vector.scm: New file.

	* boot-9.scm (module-clear!): Use hash-clear!.
	(module-for-each): Use hash-for-each.
	(module-map): Use hash-map.

2003-02-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (make-hash-table): Turned primitive.

2003-01-27  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* syncase.scm (guile-macro): Strip syntactic information from
	expression before trying to treat it as a Guile macro call.
	(Thanks to Kevin Ryde.)

2003-01-24  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (parallel, letpar): Rewritten.

2003-01-23  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
