@@ -1,5 +1,7 @@
 2003-03-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
 
+	* modules.c (scm_module_import_interface): New function.
+
 	* goops.c, goops.h (scm_class_accessor_method): Renamed from
 	scm_class_accessor.
 	(scm_class_accessor): New class.
